# K210_AI_V7s_Plus

./: .gitignore  CMakeLists.txt  README.md  build_esp_at_probe.bat  build_k210.bat  build_k210_app_slot0.bat  build_klink_bringup_v2.bat  build_recovery_esp_at_test.bat  build_recovery_esp_v2.bat  build_storage_selftest_v2.bat  build_wifi_updater_v2.bat  build_xtal_meter.bat  cam_capture_k210_sd.bat  flash_k210.bat  flash_k210_app_slot0.bat  format_k210_sd.bat  monitor_k210.bat  run_camera_capture.bat  run_k210_selftest.bat  run_k210_stack_diag.bat  test_slot0_clean.bat  test_slot0_fast.bat
cmake/: CMakeLists.txt  common.cmake  compile-flags.cmake  toolchain.cmake
docs/: ARCHITECTURE_V2.md  HARDWARE_MAP_V2.md  SD_SPI_K210_REGISTER_MAP.md  TEST_REPORT_V2_2026-07-12.md  UPDATE_PIPELINE.md  camera_gc0328_k210.md  downloads.md  hardware.md  voice-lines.md
docs/photos/: README.md
docs/tmp/: main.py  show.py
docs/tools/: dev_agent.py  diag.py  maix.py  make_envelopes.py  pc_client_test.py  render_faces.py  wifi_push.py
docs/tools/probes/: amp_off.py  face_demo.py  gen_wav_onboard.py  hiss_combo.py  hiss_silence_player.py  lcd_audio_test.py  modlist.py  multidev_test.py  play_short.py  probe.py  probe2.py  readback.py  sd_inspect.py  setup_audio.py  setup_marker.py  show_diag.py  speaker_test2.py  tcp_client_test.py  tcp_server_test.py  test_show.py  wifi_connect.py  wifi_connect2.py
firmware/hello/: CMakeLists.txt
firmware_v2/common/: k210_flash.c  k210_flash.h  kboot_meta_v2.c  kboot_meta_v2.h  newlib_locks.c  sha256_stream.c  sha256_stream.h
firmware_v2/esp_at_probe/: CMakeLists.txt  main.c
firmware_v2/klink_bringup/: CMakeLists.txt  main.c
firmware_v2/kstream_slave/: CMakeLists.txt  kstream_slave.c  kstream_slave.h  kupdate_task.c  kupdate_task.h  main.c
firmware_v2/recovery_esp/: CMakeLists.txt  esp_at_image.S.in  esp_images.S.in  main.c  newlib_locks.c
firmware_v2/storage_selftest/: CMakeLists.txt  main.c
firmware_v2/wifi_updater/: CMakeLists.txt  main.c
firmware_v2/xtal_meter/: CMakeLists.txt  main.c  startup.S
lds/: kendryte_app_slot0.ld
lib/bsp/device/: dvp.cpp  spi.cpp  uart.cpp
lib/drivers/src/storage/: sdcard.cpp
lib/freertos/: CMakeLists.txt  os_entry.c
lib/freertos/conf/: FreeRTOSConfig.h
lib/freertos/kernel/storage/: filesystem.cpp
logs/: capture.rgb565
protocol/: klink_v1_link.c  knet_v2.h  kstream_v2.h  kupdate_v2.c  kupdate_v2.h  test_sha256_stream.c
protocol/tests/: test_klink_v1_link.c
sdcard/: flash.json
sdcard/show/: e_angry.env  e_curious.env  e_excited.env  e_happy.env  e_laughing.env  e_love.env  e_neutral.env  e_sad.env  e_sleepy.env  e_surprised.env  f_angry.rgb  f_angry_t.rgb  f_curious.rgb  f_curious_t.rgb  f_excited.rgb  f_excited_t.rgb  f_happy.rgb  f_happy_t.rgb  f_laughing.rgb  f_love.rgb  f_love_t.rgb  f_neutral.rgb  f_neutral_t.rgb  f_sad.rgb  f_sad_t.rgb  f_sleepy.rgb  f_sleepy_t.rgb  f_surprised.rgb  f_surprised_t.rgb
src/: amp.c  amp.h  app_clock.c  app_clock.h  app_flash.c  app_flash.h  app_spi3_rw.c  audio.c  audio.h  boot_app_header.S  camera.c  camera.h  diag_screen.c  diag_screen.h  envelopes.py  esp_flasher.c  esp_flasher.h  esp_spi_link.c  esp_spi_link.h  esp_uart_log.c  esp_uart_log.h  gc0328_regs.h  jlt32009a.c  k210_maixpy_sd_port.c  k210_maixpy_sd_port.h  lcd.c  lcd.h  log.c  log.h  main.c  main.py  newlib_stubs.c  pinout.h  project_cfg.h  sd.c  sd.h  sd_uart.c  sd_uart.h  show.c  show.h  (+4 more)
tools/: apply_fast_io_tuning.py  build.ps1  check_sd_pc.py  dev_run.py  dev_server.py  flash_maixpy_demo.bat  k210_health.py  ksd_cmd.py  ksd_command.py  ksd_console_rw_test.py  maixpy_camera_demo.py  make_app_slot0_ld.py  make_k210_slot_kfpkg.py  make_voice.py  make_wav_env.py  monitor_k210.py  patch_build_apply_raw_spi.py  patch_sdcard_cs_mask.py  patch_sdcard_driver_maixpy.py  patch_sdcard_full_duplex_read.py  patch_sdcard_raw_spi.py  pc_server_test.py  prepare_show_assets.ps1  prepare_show_assets.py  print_slot0_header.py  read_boot.py  render_faces.py  restore_k210_project.bat  robovoice.py  run_maixpy_camera_demo.py  sd_uart_put.py  snapshot_recv.py  wifi_asset_server.py
tools/probes/: anim.py  audio_api.py  check_mainpy.py  cleanup.py  dump.py  face_emotions.py  face_lib.py  flash_check.py  gen_sounds.py  net_diag.py  play_voice.py  player_test.py  sd_check.py  setup_marker_boot.py  speaker_diag.py  speaker_test.py  tight_loop.py  wav_info.py  wifi_recv.py  wifi_scan.py
